Fixing bugs in executor service